--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "imgbun-wrapper-api",
+  "name": "imgbun-wrapper",
   "version": "1.0.0",
-  "main": "api/jpg.js",
   "type": "module",
-  "scripts": {
-    "start": "node api/jpg.js"
-  },
   "dependencies": {
-    "axios": "^1.6.8",
+    "axios": "^1.6.0",
     "express": "^4.18.2"
   }
 }
