--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@napi-rs/canvas": "^0.1.38",
+    "formdata-node": "^5.0.1",
     "node-fetch": "^3.3.2"
   },
   "engines": {
