--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "captcha-api",
   "version": "1.0.0",
-  "description": "CAPTCHA image generator with auto-delete via ImgBB",
-  "main": "api/captcha.js",
   "type": "module",
+  "main": "api/captcha.js",
   "scripts": {
-    "dev": "vercel dev",
     "start": "vercel dev"
   },
   "dependencies": {
-    "@napi-rs/canvas": "^0.1.38",
-    "formdata-node": "^5.0.1",
-    "node-fetch": "^3.3.2"
+    "form-data": "^4.0.0",
+    "jimp": "^0.22.10",
+    "node-fetch": "^2.6.7"
   },
   "engines": {
     "node": ">=18"
-  },
-  "license": "MIT"
+  }
 }
