--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "captcha-api",
-  "version": "1.0.0",
-  "type": "module",
-  "main": "api/captcha.js",
-  "scripts": {
-    "start": "vercel dev"
-  },
-  "dependencies": {
-    "form-data": "^4.0.0",
-  "jimp": "^0.22.10",
-  "node-fetch": "^2.6.11"
-  },
-  "engines": {
-    "node": ">=18"
-  }
+  "name": "captcha-api",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "api/captcha.js",
+  "scripts": {
+    "start": "vercel dev"
+  },
+  "dependencies": {
+    "canvas": "^2.11.2",
+    "form-data": "^4.0.0",
+    "node-fetch": "^2.6.11"
+  },
+  "engines": {
+    "node": ">=18"
+  }
 }
