--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "canvas": "^2.11.2",
     "form-data": "^4.0.0",
-    "node-fetch": "^2.6.11"
+    "node-fetch": "^2.6.11",
+    "jsdom": "^22.1.0"
   },
   "engines": {
     "node": "20.x"
