--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "vercel dev"
   },
   "dependencies": {
-    "canvas": "^2.11.2",
-    "form-data": "^4.0.0",
-    "node-fetch": "^2.6.11",
-    "jsdom": "^22.1.0"
+  "canvas": "^2.11.2",
+  "form-data": "^4.0.0",
+  "node-fetch": "^2.6.11",
+  "cheerio": "^1.0.0-rc.12"
   },
   "engines": {
     "node": "20.x"
