--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "captcha-api",
   "version": "1.0.0",
   "type": "module",
@@ -8,9 +8,9 @@
   },
   "dependencies": {
     "canvas": "^2.11.2",
+    "cheerio": "^1.0.0-rc.12",
     "form-data": "^4.0.0",
-    "node-fetch": "^2.6.11",
-    "cheerio": "^1.0.0-rc.12"
+    "node-fetch": "^2.6.11"
   },
   "engines": {
     "node": "20.x"
